@@ -14,6 +14,7 @@
       <class name="com.beust.jcommander.dynamic.DynamicParameterTest" />
       <class name="com.beust.jcommander.VariableArityTest" />
       <class name="com.beust.jcommander.MethodSetterTest" />
+      <class name="com.beust.jcommander.PositiveIntegerTest" />
     </classes>
   </test>
 
