@@ -1,5 +1,6 @@
 Current
 
+Fixed: Bugs with the PositiveInteger validator
 Fixed: Parameters with a single double quote were not working properly
 
 1.27
